<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Unlock -->
    <string name="unlock1">All data generated by the application on your device will be deleted and your user account will be disabled</string>
    
    <!-- Unlock -->
    <string name="pendingPayment1">Hello,</string>
    <string name="pendingPayment2">We are sorry to inform that the service is not enabled for your device.</string>
    <string name="pendingPayment3">Please contact your administrator for more information.</string>
    <string name="pendingPayment4">Your friends at FlushOut Solutions.</string>
    
    
    <!-- User WIZARD 1 -->
    <string name="version">Version 1.1.1-00001</string>
    <string name="copyright">©2014 FlushOut Sol.</string>
    
    <string name="app_name">Fomonitor</string>
    <string name="action_userinfo">User</string>
    <string name="action_settings">Configuration</string>
    <string name="action_unlock">Unlock</string>
    <string name="title_activity_settings">Configuration</string>
    <string name="title_activity_user_info">User information</string>
    <string name="flushout">FlushOut</string>
    <string name="btnNext">Next</string>
    <string name="btnSend">Send</string>
    <string name="btnUnlock">Unlock</string>
    <string name="close">Close</string>
    
    <string name="btnAccept">Accept</string>
    <string name="btnCancel">Cancel</string>

    <!-- User WIZARD 1 -->
    <string name="title_activity_wizard1">Registro do aparelho</string>
    <string name="wiz1ActivationCode">Please tell activation code:</string>
	<string name="wiz1AuthenticationCode">Please tell authentication code:</string>

    <!-- User WIZARD 2 -->
    <string name="title_activity_wizard2">Dados do usuário</string>
    <string name="confirmation_1">This device will be registered for </string>
    <string name="confirmation_2">to continue enter your user name and press the "Acept" button</string>

<!--     <string name="user_to">PARA O USUÁRIO</string>
    <string name="pin_to">SEU PIN SERÁ</string> -->

    <!-- User Settings List -->
    <string name="settingsWifi">Wi-Fi</string>
    <string name="settingsScreen">Screen</string>
    <string name="settingsLocalSafety">Local safety</string>
    <string name="settingsApps">Application manager</string>
    <string name="settingsAccounts">Accounts</string>
    <string name="settingsPrivacy">Privacy</string>
    <string name="settingsStorage">Storage</string>
    <string name="settingsKeyboard">Language and input</string>
    <string name="settingsVoice">Voice</string>
    <string name="settingsAccessibility">Accessibility</string>
    <string name="settingsDateTime">Date and time settings</string>
    <string name="settingsAbout">About device</string>
    <string name="imei">Imei</string>
    <string name="email">Email</string>
    <string name="user">User</string>
    <string name="park">Company</string>

    <!-- Alerts -->
    <string name="invalid_data">invalid Date</string>
    <string name="type_activation_code">Enter the activation code</string>
    <string name="network_error">Network error</string>
    <string name="check_connection">Check your Internet connection and try again</string>
    <string name="error">Error</string>
    <string name="communication_problem">There was a problem communicating. Try again</string>
    <string name="register_problem">There was a problem in the registry. Try again</string>
    <string name="authentication_problem">the authentication code is not correct. Try again</string>
    <string name="register_go">Registering the device. Please Wait...</string>
    <string name="invalid_activation_code">Invalid activation code</string>
    <string name="hold_on">Please Wait...</string>
    <string name="loading_apps">Loading the list of applications...</string>
    <string name="loading_apps_update">Updating the application list...</string>
    <string name="validating_activation_code">Validating the activation code...</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="gps_need_to_be_enabled">Your GPS must be enabled.</string>
    <string name="enable">Enable</string>
    
    <string name="title_activity_password_pin">Unlock</string>
    <string name="typepassword">Enter your password</string>
    <string name="strUnlock">Enter your code</string>
    
    <string name="typepin">Enter PIN</string>
    <string name="invalid_password">Invalid password</string>

    <!-- Navigation Drawer -->
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
</resources>