<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.flushout.fomonitor.MainActivity" >

    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:icon="@drawable/ico_user"
        android:title="@string/action_userinfo"/>
        
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="200"
        android:icon="@drawable/ico_settings"
        android:title="@string/action_settings"/>
        
    <item
        android:id="@+id/action_unlock"
        android:orderInCategory="300"
        android:icon="@drawable/ico_unlock"
        android:title="@string/action_unlock"/>

</menu>
