<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_body"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".PendingPaymentActivity" >

        <TextView
        android:id="@+id/txvText1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="30dp"
		android:textSize="18sp"
		android:gravity="left"
        android:text="@string/pendingPayment1"
         />

        <TextView
        android:id="@+id/txvText2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="30dp"
		android:textSize="18sp"
		android:gravity="left"
        android:text="@string/pendingPayment2"
         />
        
        <TextView
        android:id="@+id/txvText3"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:gravity="left"
        android:text="@string/pendingPayment3"
         />
        
        <TextView
        android:id="@+id/txvText4"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="30dp"
		android:textSize="18sp"
		android:gravity="left"
        android:text="@string/pendingPayment4"
         />
        
</LinearLayout>
